working 2 tests of userService Class